# GNC-Simulation

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  3dAnimationData.txt  CMakeLists.txt  README.md  TODO.txt  animate.py  basilisk_sim.py  build_sim_debug.sh  config.yaml  install.sh  readme.md  requirements.txt  run.sh  run_debug.sh  setup.py  sim.py  sim_installer.sh  simulator.py  visualize_orbit.py
FSW/controllers/: BaselineNadirPointingController.py  BaselineSunPointingController.py  BcrossController.py  ControllerAlgorithm.py  LyapBasedSunPointingController.py  NonMonotonicController.py  controller.py  current_distributor.py  detumbling.py  detumbling_controller.py  dipole_moment_distributor.py  spin_stablization_controller.py  sun_pointing.py
FSW/estimators/: estimator.py
actuators/: CMakeLists.txt  Magnetorquer.cpp  Magnetorquer.h  magnetorquer.py  reaction_wheels.py
algs/: Estimators.py  PlaneFitting.py  SunSensorAlgs.py  foo.py
argus2sim/: config.py  sim.py
argus2sim/scripts/: test.py
argusim/: CMakeLists.txt  __init__.py  build_sim_debug.sh  run_job.py
argusim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
argusim/FSW/: __init__.py  fsw_utils.py  meas_preprocessing.py
argusim/FSW/controllers/: BaselineNadirPointingController.py  BaselineSunPointingController.py  BcrossController.py  ControllerAlgorithm.py  InitController.py  LyapBasedSunPointingController.py  controller.py
argusim/FSW/estimators/: AttitudeEKF.py
argusim/actuators/: Magnetorquer.h  __init__.py  magnetorquer.py
argusim/dependencies/: CMakeLists.txt
argusim/dependencies/spice-lib/: CMakeLists.txt
argusim/dependencies/tjLib/include/timing/: utils.h
argusim/dependencies/tjLib/src/: CMakeLists.txt  misc.cpp
argusim/dependencies/tjLib/src/logging/: MultiFileLogger.cpp
argusim/sensors/: Bias.py  GPS.py  IMU.py  Magnetometer.py  Sensor.py  Sensors.cpp  Sensors.h  SunSensor.py  __init__.py
argusim/simulation_manager/: __init__.py  run_trials.py  sim.py  sim_logger.py
argusim/simulation_utils/: CMakeLists.txt  ExpressionEvaluation.cpp  ParameterParser.cpp  ParameterParser.h
argusim/visualization/: __init__.py
argusim/visualization/plotter/: actuator_plots.py  att_animation.py  att_det_plots.py  isolated_trace.py  plot.py  plot_helper.py  plot_pointing.py  plot_true_states.py  plots.py  sensor_plots.py
argusim/visualization/web_visualizer/: job_comparison_tool.py
argusim/visualization/web_visualizer/templates/: home_page.html
argusim/world/: LUT_generator.py  __init__.py
argusim/world/math/: quaternions.py  utils_and_transforms.h
argusim/world/physics/: RigidBody.cpp  RigidBody.h  geometry.py
argusim/world/physics/models/: MagneticField.cpp  MagneticField.h  SRP.h  drag.cpp  drag.h  gravity.cpp  gravity.h
cmake/: 3dDynamicsSimConfig.cmake
data/: data_downloader.py  harris_priester_density_data.csv  naif0012.tls
data/logger/: Logger.py
dependencies/: CMakeLists.txt
dependencies/IMU_sim/: CMakeLists.txt  IMU.cpp  IMU.h  Sensor.cpp  Sensor.h
dependencies/tjLib/: CMakeLists.txt
dependencies/tjLib/include/: colored_output.h  misc.h
dependencies/tjLib/include/StringUtils/: StringUtils.h
dependencies/tjLib/include/logging/: MultiFileLogger.h
dependencies/tjLib/include/math/: EigenWrapper.h  conversions.h  integration.h  kinematics.h  random.h  vector_math.h
dependencies/tjLib/include/timing/: profiler.h
dependencies/tjLib/src/: CMakeLists.txt
dependencies/tjLib/src/StringUtils/: StringUtils.cpp
dependencies/tjLib/src/math/: conversions.cpp  kinematics.cpp  random.cpp  vector_math.cpp
dependencies/tjLib/src/timing/: utils.cpp
examples/: test.py
extra_funcs/: actuation.py
include/: IO.h  ParameterParser.h  RigidBody.h  utils.h  utils_and_transforms.h
montecarlo/: run_job.py  run_trials.py
montecarlo/configs/: params.yaml
montecarlo/plots_and_analysis/: parse_bin_file.py  plot.py  plots.py
payload/image_simulation/: earth_vis.py
payload/orbit_determination/: nonlinear_least_squares_od.py  test_nonlinear_least_squares.py
payload/vision/: __init__.py  camera.py  demo_frames.py  frame_processor.py  logger.py  ml_pipeline.py
physics/: Dynamics.py
physics/integrators/: RK4.py
physics/models/: AtmosphericDrag.py  Gravity.py  SolarRadiationPressure.py
sensors/: Bias.cpp  Bias.h  CMakeLists.txt  IMU.cpp  IMU.h  IMUparams.cpp  IMUparams.h  Sensor.cpp  Sensor.h  Sensor.py  Sensors.cpp  Sensors.h  SunSensor.py  imu.py  mock_vision_model.py  mock_vision_model2.py  mock_vision_model_test.py  star_tracker.py
simulationSettings/: SimSetup.py  sim_params.yaml
simulation_manager/: CMakeLists.txt  logger.py  main.cpp  run_job.py  run_trials.py  simulate_trial.cpp  simulate_trial.h
simulation_utils/: CMakeLists.txt  ExpressionEvaluation.cpp  ExpressionEvaluation.h  IO.cpp  IO.h  ParameterParser.cpp  ParameterParser.h  SatelliteAroundEarth.cpp  SatelliteAroundEarthAndMoon.cpp  exprtk.hpp
simulation_utils/visualization/plotter/: plot.py  plot_helper.py  plots.py
src/: IO.cpp  ParameterParser.cpp  RigidBody.cpp  SatelliteAroundEarth.cpp  SatelliteAroundEarthAndMoon.cpp  dynamics.cpp  main.cpp  simulate_trial.cpp  test_matplotlib.cpp  utils.cpp
tests/: CMakeLists.txt  binder.cpp  gravity_test.py  magnetic_field_test.py  sol_pos_ECI.csv  srp_test.py
unit_testing/: run_tests.py  test_math.py  test_physics.py
visualization/: plot_helper.py  plot_results.py
visualization/plotter/: isolated_trace.py  plot.py  plot_helper.py  plot_menu.py  plot_state.py  plots.py
world/: CMakeLists.txt
world/math/: integrators.py  quaternions.py  time.py  transforms.py  utils_and_transforms.cpp  utils_and_transforms.h
world/physics/: RigidBody.cpp  RigidBody.h  dynamics.py  index.py  orbital_dynamics.py
world/physics/models/: CMakeLists.txt  MagneticField.cpp  MagneticField.h  SRP.cpp  SRP.h  drag.cpp  drag.h  drag.py  gravity.cpp  gravity.h  gravity.py  magnetic_field.py  solar_generation.py  srp.py  test_solar_generation.py
world/physics/models/plots/: -x_power_sweep.csv
(+24 files in other folders)
